syntax = 'proto3';
package org.dneversky.gateway;

// Data Transfer Objects

message User {
  int64 id = 1;
  string username = 2;
  string password = 3;
  repeated Role roles = 4;
  bool enabled = 5;
  string name = 6;
  string phone = 7;
  string birthday = 8;
  string avatar = 9;
  string city = 10;
  string about = 11;
  string registeredDate = 12;
  Post post = 13;
}

message Role {
  int32 id = 1;
  string name = 2;
}

message Post {
  int32 id = 1;
  string name = 2;
}

// Requests / Responses

message UserByUsernameRequest {
  string username = 1;
}

message UserByIdRequest {
  int64 id = 1;
}

message AllUsersRequest {}

message AllUsersResponse {
  repeated User users = 1;
}

// Services

service UserService {
  rpc getAllUsers(AllUsersRequest) returns (AllUsersResponse);
  rpc getUserByUsername(UserByUsernameRequest) returns (User);
  rpc getUserById(UserByIdRequest) returns (User);
}